--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.1</version>
 
     <properties>
+        <junit.output.dir>output</junit.output.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -73,6 +74,15 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.20.1</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
@@ -82,4 +92,5 @@
             <version>1.3.2</version>
         </dependency>
     </dependencies>
+
 </project>
