--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>space.exploration</groupId>
     <artifactId>spice.utilities</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
 
     <properties>
         <junit.output.dir>output</junit.output.dir>
@@ -91,6 +91,11 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>space.exploration</groupId>
+            <artifactId>communications.protocol</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+    </dependencies>
 </project>
